=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

   beta05

   * support for windows hidden folders with terminal dollar sign:
    //share/folder$/path/file

   * ray now stops and movie and turns off sculpting

   * Better return conventions for the PyMOL API:  errors return negatives,
   success returns None, and boolean queries return 0 or 1.  Exceptions
   are raised by default on error conditions unless the 
   raise_exceptions setting is disabled

   beta03

   * fixes to presets and polar contact finding code

   * changes to the action menu for selections

   * addressed single-click select and menu with slow refresh

   * fixed serious race condition / threading bug in popup menus -- this
   explains & eliminate the sporadic crashes observed on smp machines

   beta02

   * fixed broken reading of multistate objects from strings
   
   beta01

   * identified cause and temporary workaround for bad nVidia drivers on linux

   * fixed performace issue with torsion update mechanism when rotating torsions

Changes up to 0.98

   beta35

   * isosurface and isomesh now use the same ranging criteria

   * matrix_transfer, matrix_reset commands (WHAT A PAIN)

   * added support for row-major 4x4 homogenous transformation
     matrices, and in resolving internal conflicts with TTT matrices,
     made them more compatible with homogenous matrices

   * internal matrix code cleaned up somewhat -- conventions used
     are now explicit in most cases.

   * distance wizard becomes measurement wizard

   beta34

   * fixed glitch in handling bogus CRYST records

   * patched up some memory leaks

   beta33

   * wildcards for model and selection names

   * auto disable atom name wildcard for files with asterisks in 
     the atom name field

   beta32

   * psw files now start from first scene by default
